--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -13,8 +13,9 @@ header{
     font-size: 15px;
     text-align: center;
     padding: 15px;
-
+    opacity: 0.85;
     font-family: 'Indie Flower', cursive;
+    //width: 100%;
 }
 
 body{
