--- a/css/estilo.css
+++ b/css/estilo.css
@@ -24,8 +24,8 @@
   margin-left: 20px; }
 
 .intro iframe {
-  height: 300px;
-  width: 500px;
+  height: 100%;
+  width: 100%;
   object-fit: fill;
   margin-bottom: 30px; }
 
@@ -97,6 +97,7 @@ header {
   font-size: 15px;
   text-align: center;
   padding: 15px;
+  opacity: 0.85;
   font-family: 'Indie Flower', cursive; }
 
 body {
