--- a/scss/_imgyMedia.scss
+++ b/scss/_imgyMedia.scss
@@ -12,7 +12,7 @@
         margin-left: 20px;
     }
     iframe{
-        @include formato(300px,500px);
+        @include formato(100%,100%);
         margin-bottom: 30px;
     }  
 }
